<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
        <group android:menuCategory="container">
                <item
                    android:id="@+id/maps"
                    android:icon="@drawable/ic_map_24"
                    android:title="@string/title_activity_maps"
                    app:showAsAction="ifRoom"
                    />
                <item android:id="@+id/logout"
                    android:title="@string/logout"
                    android:icon="@drawable/baseline_logout_24"
                    app:showAsAction="always" />
        </group>
</menu>